# MagnetarPrometheus

./: .gitignore  ARCHITECTURE.md  BITACORA.md  BLOCKERS.md  BRANCHING_MODEL.md  CONTRIBUTING.md  DAY_PLAN.md  DAY_PLAN2.md  Home.md  LICENSE  PLAN.md  PR_ISSUE_LINKING.md  PocPlan.md  README.md  REQUIREMENTS.md  RULES.md  STATUS.md  TESTING.md  WIP_GUIDELINES.md  WORKFLOW_STUDIO_EXECUTION_PLAN.md  run_app.sh  run_full_stack.sh  update_discussions.sh
.github/workflows/: ci.yml  release.yml
backend/: pyproject.toml
backend/src/magnetar_prometheus/: __init__.py  bootstrap.py  cli.py  run_store.py  version.py
backend/src/magnetar_prometheus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/magnetar_prometheus/api/: __init__.py  server.py
backend/src/magnetar_prometheus/core/: __init__.py  context_manager.py  engine.py  evaluator.py  executor_router.py  workflow_loader.py
backend/src/magnetar_prometheus/core/models/: __init__.py
backend/src/magnetar_prometheus/engine/: __init__.py
backend/src/magnetar_prometheus/executors/: __init__.py  base.py  python_executor.py
backend/src/magnetar_prometheus/history/: models.py
backend/src/magnetar_prometheus/infrastructure/: __init__.py
backend/src/magnetar_prometheus/modules/: __init__.py  example_registry.py
backend/src/magnetar_prometheus/modules/email_module/: __init__.py  email_triage.yaml  manifest.yaml  steps.py
backend/src/magnetar_prometheus/modules/error_module/: error_workflow.yaml  steps.py
backend/src/magnetar_prometheus/modules/http_module/: http_workflow.yaml  steps.py
backend/src/magnetar_prometheus/modules/linear_module/: linear_workflow.yaml  steps.py
backend/src/magnetar_prometheus/modules/math_module/: math_workflow.yaml  steps.py
backend/src/magnetar_prometheus/plugins/: __init__.py  bootstrap.py  manager.py  models.py
backend/src/magnetar_prometheus/registry/: __init__.py  step_registry.py
backend/tests/: test_api_server.py  test_base.py  test_bootstrap.py  test_bootstrap2.py  test_cli.py  test_documentation_contract.py  test_engine.py  test_error_module.py  test_evaluator.py  test_example.py  test_executor.py  test_history_models.py  test_http_module.py  test_linear_module.py  test_loader.py  test_math_module.py  test_plugins.py  test_run_store.py  test_version.py
branches/codex/add-example-workflow-display/: review.md
branches/codex/add-functionality-to-save-and-load-workflows/: review.md
branches/feature/harden-next-step/: plan.md
branches/feature/minimal-api-server-110130192739416379/: plan.md
branches/feature/planning-product-surface/: plan.md
branches/feature/upgrade-angular-21/: plan.md
branches/implement-core-runtime/: plan.md
branches/implement-core-runtime-17609737249557533045/: plan.md  review.md
branches/refactor/ui-template-extraction/: plan.md
branches/review-runtime-remediation-20260326/: plan.md
desktop/: README.md  package.json
desktop/src/: main.js  preload.js
docs/: README.md  branch-review-core-runtime.md  parallel-agent-prompts-20260326.md
projects/: _template.project.yml
scripts/: README.md  bootstrap_python.sh  check_ui_code_contracts.py  check_ui_docs.sh  get_version_stamp.sh  run_backend.sh  run_tests.sh
sdk/python/: pyproject.toml
sdk/python/src/magnetar_prometheus_sdk/: __init__.py  models.py
sdk/python/tests/: test_models.py
sdk/schemas/: README.md  run-execution-schema.md  run-job-schema.md  workflow-graph-schema.md
ui/: README.md  angular.json  app.js  index.html  karma.conf.cjs  package-lock.json  package.json  styles.css
ui/src/: index.html  main.ts  styles.css
ui/src/app/: app.component.spec.ts  app.component.ts  app.config.spec.ts  app.config.ts  app.routes.spec.ts  app.routes.ts
ui/src/app/core/layout/: app-shell.component.css  app-shell.component.html  app-shell.component.spec.ts  app-shell.component.ts
ui/src/app/features/job-submission/: job-submission-page.component.css  job-submission-page.component.html  job-submission-page.component.spec.ts  job-submission-page.component.ts
ui/src/app/features/overview/: overview-page.component.html  overview-page.component.spec.ts  overview-page.component.ts
ui/src/app/features/run-detail/: run-detail-page.component.css  run-detail-page.component.html  run-detail-page.component.spec.ts  run-detail-page.component.ts
ui/src/app/features/run-history/: run-history-page.component.css  run-history-page.component.html  run-history-page.component.spec.ts  run-history-page.component.ts
ui/src/app/features/settings/: settings-page.component.css  (+3 more)
ui/src/environments/: environment.api.ts  environment.development.ts  environment.ts
work-/: 12-execution-summary.md
work-/for-agents/: 01-backend-api-skeleton.md  02-run-store-and-history.md  03-job-submission-models.md  04-web-ui-mvp-shell.md  05-cli-ux-and-launch-flow.md  06-example-workflows-and-modules.md  07-run-contract-docs-and-schema.md  08-testing-surface-expansion.md  09-next-product-slice-planning.md  10-user-incremental-governance.md  11-frontend-prompt-index.md  12-frontend-workspace-skeleton.md  13-frontend-web-shell.md  14-frontend-data-contract-boundary.md  15-frontend-design-system-and-layout.md  16-frontend-run-history-slice.md  17-frontend-job-submission-slice.md  18-desktop-shell-skeleton.md  19-frontend-testing-and-doc-guards.md  20-frontend-local-run-flow.md
(+43 files in other folders)
