[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magnetar-prometheus"
version = "0.1.0"
description = "Backend runtime for the MagnetarPrometheus workflow orchestration platform."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

