[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magnetar-prometheus-sdk"
# Note: This is the PEP-440 semantic version for python packaging.
# The canonical release version stamp for MagnetarPrometheus follows
# the 'yyyy.MM.dd HH:mm:sss' format and is generated separately.
version = "0.1.0"
description = "Shared contracts and models for the MagnetarPrometheus workflow orchestration platform."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
